--- a/index.html
+++ b/index.html
@@ -10,17 +10,25 @@
 </head>
     <body>
         <main>
-            <h1>Get in touch</h1>
+            <h1>Get In Touch</h1>
+            <div class="container-contact">
+             
             <div class="row">
                 <form class="contact-form validate-form">
 
-            <input class="input1" type="text" name="name" placeholder="First Name">
-            <input class="input2" type="text" name="name" placeholder="Last name">
-            <input class="input3" type="text" name="name" placeholder="Email">
-            <input class="input4" type="text" name="name" placeholder="Phone">
-            <input class="input5" type="text" name="name" placeholder="Adress">
-            <input class="input6" type="text" name="name" placeholder="Type your message here">
-
+            <input type="text" name="name" placeholder="First Name" class="form_input">
+            <input type="text" name="name" placeholder="Last name" class="form_input">
+            <input type="text" name="name" placeholder="Email" class="form_input">
+            <input type="text" name="name" placeholder="Phone" class="form_input">
+            <input type="text" name="name" placeholder="Adress" class="form_input">
+            <input type="text" name="name" placeholder="Type your message here" class="form_input">
+            <textarea
+            placeholder="Type your message here"
+            class="form_input"
+            rows="4"
+            style="width: 100%; resize: vertical"
+          ></textarea>
+          <button type="submit" class="form_submit-btn">Submit</button>
         </main>
     </body>
 
